[gd_scene load_steps=10 format=2]

[ext_resource path="res://ui/components/CodeEditor.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/theme/gdscript_app_theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/components/PracticeInfoPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/components/GameViewport.gd" type="Script" id=4]
[ext_resource path="res://ui/components/OutputConsole.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/theme/panel_game_screen.tres" type="StyleBox" id=6]
[ext_resource path="res://ui/theme/panel_game.tres" type="StyleBox" id=7]
[ext_resource path="res://ui/UIPractice.gd" type="Script" id=8]
[ext_resource path="res://ui/theme/fonts/font_text_bold.tres" type="DynamicFont" id=9]

[node name="UIPractice" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
custom_constants/separation = 8
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="Layout" type="HBoxContainer" parent="Margin"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1900.0
margin_bottom = 1060.0

[node name="Control" type="Control" parent="Margin/Layout"]
margin_right = 623.0
margin_bottom = 1040.0
rect_min_size = Vector2( 623, 0 )

[node name="PracticeInfoPanel" parent="Margin/Layout/Control" instance=ExtResource( 3 )]
anchor_left = 1.0
margin_left = -623.0
size_flags_stretch_ratio = 2.0

[node name="CodeEditor" parent="Margin/Layout" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 639.0
margin_right = 1251.0
margin_bottom = 1040.0
text = ""

[node name="Output" type="VBoxContainer" parent="Margin/Layout"]
margin_left = 1267.0
margin_right = 1880.0
margin_bottom = 1040.0
size_flags_horizontal = 3

[node name="GameFrame" type="PanelContainer" parent="Margin/Layout/Output"]
margin_right = 613.0
margin_bottom = 682.0
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
custom_styles/panel = ExtResource( 7 )

[node name="MarginContainer" type="MarginContainer" parent="Margin/Layout/Output/GameFrame"]
margin_left = 8.0
margin_top = 8.0
margin_right = 605.0
margin_bottom = 674.0
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 60

[node name="GameScreen" type="PanelContainer" parent="Margin/Layout/Output/GameFrame/MarginContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 585.0
margin_bottom = 606.0
custom_styles/panel = ExtResource( 6 )

[node name="GameViewport" type="ViewportContainer" parent="Margin/Layout/Output/GameFrame/MarginContainer/GameScreen"]
margin_left = 8.0
margin_top = 8.0
margin_right = 565.0
margin_bottom = 586.0
rect_min_size = Vector2( 100, 0 )
stretch = true
script = ExtResource( 4 )

[node name="Label" type="Label" parent="Margin/Layout/Output/GameFrame"]
margin_left = 8.0
margin_top = 626.0
margin_right = 605.0
margin_bottom = 674.0
rect_min_size = Vector2( 0, 48 )
size_flags_vertical = 8
custom_colors/font_color = Color( 0.188235, 0.188235, 0.286275, 1 )
custom_fonts/font = ExtResource( 9 )
text = "GDQuestBoy"
align = 1

[node name="Console" parent="Margin/Layout/Output" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 698.0
margin_right = 613.0
margin_bottom = 1040.0

[node name="Tween" type="Tween" parent="."]
